Fixed bug where phantom space was added to Card component when there was a wrappable row

--- a/src/app/components/Card/index.module.scss
+++ b/src/app/components/Card/index.module.scss
@@ -13,7 +13,6 @@
 
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   border: 1px solid colors.$border-gray;
   border-radius: 10px;
   background-color: white;
